Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8067

Mercurial annotate fails to jump to current line in annotation output

XMLWordPrintable

    • 804c94262e3a87e9f4032c79ccea62101b915156

      Steps to reproduce:
      Open file in mercurial repository
      Choose a line in the middle of the file
      Tools|Mercurial|Annotate current file.
      Annotation appears, but cursor stays on line 1

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            bilking Bill King
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes