Mercurial: annotate - goto current line

Retrieve current line from editor and provide it to the client

Task-number: QTCREATORBUG-8067
Change-Id: Ia1a8c9556ffc975cf2bed72ed790aa02f7157ffc
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>